<resources>
    <string name="app_name">Mobile Tasks</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="email">email</string>
    <string name="phone_number">phone number</string>
    <string name="name">name</string>
    <string name="password">password</string>
    <string name="back">Back</string>
    <string name="sign_out">sign out</string>
    <string name="welcome">Welcome, </string>
    <string name="empty_email_error">This field can`t be empty</string>
    <string name="wrong_email">wrong email input</string>
    <string name="empty_password_error">password can`t be empty</string>
    <string name="short_password_error">need at least 8 symbols</string>
    <string name="short_name_error">need at least 4 symbols</string>
    <string name="wrong_phone_number">expect +380*********</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="used_email_error">that email is used</string>
    <string name="wrong_email_or_password">incorrect email or password</string>
    <string name="next">Next</string>
    <string name="equipment_type">Equipment type</string>
    <string name="failure">Failed</string>
    <string name="no_internet">no internet</string>
    <string name="logout" type="id">sign_out_button</string>
    <string name="tab2">Empty Page</string>
    <string name="profile">Profile</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="update">Update</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="profile_picture">Profile picture</string>
    <string name="image_uploaded">Image uploaded!</string>
    <string name="username_updated">Username is updated!</string>
    <string name="email_updated">Email is updated!</string>
    <string name="error">Error</string>
    <string name="notification_opened">You Opened the Notification!</string>
</resources>
