<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/colorPrimaryDark">

    <EditText
        android:id="@+id/create_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_margin="25dp"
        android:hint="@string/email"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/create_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone_number"
        android:layout_margin="25dp"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/create_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_margin="25dp"
        android:hint="@string/name"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/create_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_margin="25dp"
        android:hint="@string/password"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/back" />



</LinearLayout>