<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:padding="15dp">

    <EditText
        android:id="@+id/login_screen_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        tools:ignore="LabelFor"
        android:importantForAutofill="no"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/login_screen_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:hint="@string/password"
        tools:ignore="LabelFor"
        android:layout_margin="15dp"/>

    <Button
        android:id="@+id/login_screen_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/sign_in"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/login_screen_sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/sign_up"
        tools:ignore="RtlHardcoded" />
    
</LinearLayout>