<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".HomePage">

    <TextView
        android:id="@+id/logged_in_screen_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_gravity="center"
        android:text="@string/welcome"
        android:textSize="50sp" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:layout_gravity="center"
        android:text="@string/sign_out" />

    <Button
        android:id="@+id/home_activity_nextBtn"
        android:layout_width="232dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:text="@string/next"
        app:layout_constraintBottom_toTopOf="@+id/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

</LinearLayout>